--- a/Videostore.Repository/Videostore.Repository.csproj
+++ b/Videostore.Repository/Videostore.Repository.csproj
@@ -13,4 +13,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Videostore.Data\Videostore.Data.csproj" />
+  </ItemGroup>
+
 </Project>
