--- a/Videostore.Service/Videostore.Service.csproj
+++ b/Videostore.Service/Videostore.Service.csproj
@@ -13,4 +13,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Videostore.Repository\Videostore.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
